--- a/glade/ui.glade
+++ b/glade/ui.glade
@@ -8,6 +8,7 @@
     <property name="page_increment">10</property>
   </object>
   <object class="GtkTreeViewColumn" id="treeviewcolumn1">
+    <property name="resizable">True</property>
     <property name="title" translatable="yes">column</property>
   </object>
   <object class="GtkApplicationWindow" id="window">
@@ -30,6 +31,7 @@
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="receives_default">True</property>
+            <property name="active">True</property>
           </object>
         </child>
         <child>
@@ -85,9 +87,11 @@
         <property name="can_focus">False</property>
         <child>
           <object class="GtkRevealer" id="sidebar_revealer">
+            <property name="width_request">200</property>
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="transition_type">slide-right</property>
+            <property name="reveal_child">True</property>
             <child>
               <object class="GtkBox">
                 <property name="visible">True</property>
@@ -116,6 +120,7 @@
                       <object class="GtkTreeView" id="tree_view">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
+                        <property name="enable_tree_lines">True</property>
                         <child internal-child="selection">
                           <object class="GtkTreeSelection"/>
                         </child>
