--- a/css/theme.css
+++ b/css/theme.css
@@ -10,23 +10,38 @@ textview#side_view {
     color: #fff;
 }
 
-layout {
-    background-color: #000;
-}
 
 text {
     color: #fff;
 }
 
 treeview {
-    border-right-style: solid;
+    /*border-right-style: solid;
     border-right-width: 1px;
-    border-right-color: #000;
+    border-right-color: #000;*/
     padding: 0px;
 }
 
 label {
     margin-left: 2px;
 }
+
+button {
+    background-color: transparent;
+    border-radius: 20px;
+    border-style: none;
+    box-shadow: none;
+}
+
+headerbar {
+    background-color: transparent;
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    border-bottom-color: transparent;
+}
+
+/*tab {
+    padding: 2px;
+}*/
 
 
