Aedded function to save file

--- a/css/theme.css
+++ b/css/theme.css
@@ -37,6 +37,7 @@ headerbar {
     border-bottom-style: solid;
     border-bottom-width: 1px;
     border-bottom-color: transparent;
+    margin: 0px;
 }
 
 tab {
