--- a/glade/ui.glade
+++ b/glade/ui.glade
@@ -6,7 +6,7 @@
     <property name="resizable">True</property>
     <property name="title" translatable="yes">column</property>
   </object>
-  <object class="GtkApplicationWindow" id="window">
+  <object class="GtkWindow" id="window">
     <property name="can_focus">True</property>
     <property name="default_width">800</property>
     <property name="default_height">600</property>
@@ -15,7 +15,7 @@
       <placeholder/>
     </child>
     <child>
-      <object class="GtkBox">
+      <object class="GtkBox" id="main_box">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <child>
@@ -100,7 +100,7 @@
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
                 <child>
-                  <object class="GtkImage">
+                  <object class="GtkImage" id="save_butto">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="icon_name">drive-harddisk</property>
