--- a/glade/ui.glade
+++ b/glade/ui.glade
@@ -2,24 +2,22 @@
 <!-- Generated with glade 3.22.2 -->
 <interface>
   <requires lib="gtk+" version="3.20"/>
-  <object class="GtkImage">
-    <property name="visible">True</property>
-    <property name="can_focus">False</property>
-    <property name="tooltip_text" translatable="yes">open folder</property>
-    <property name="icon_name">document-open-symbolic</property>
-    <property name="icon_size">1</property>
-  </object>
   <object class="GtkTreeViewColumn" id="treeviewcolumn1">
     <property name="resizable">True</property>
     <property name="title" translatable="yes">column</property>
   </object>
-  <object class="GtkWindow" id="window">
+  <object class="GtkApplicationWindow" id="window">
     <property name="can_focus">True</property>
     <property name="default_width">800</property>
     <property name="default_height">600</property>
-    <property name="decorated">False</property>
     <child type="titlebar">
-      <placeholder/>
+      <object class="GtkHeaderBar" id="header">
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
+        <property name="opacity">0.90000000000000002</property>
+        <property name="has_subtitle">False</property>
+        <property name="show_close_button">True</property>
+      </object>
     </child>
     <child>
       <object class="GtkBox" id="main_box">
@@ -133,26 +131,6 @@
                 <property name="position">4</property>
               </packing>
             </child>
-            <child>
-              <object class="GtkButton" id="save_btn">
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">True</property>
-                <child>
-                  <object class="GtkImage">
-                    <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <property name="icon_name">document-save-symbolic</property>
-                    <property name="icon_size">1</property>
-                  </object>
-                </child>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">True</property>
-                <property name="position">5</property>
-              </packing>
-            </child>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -162,6 +140,7 @@
         </child>
         <child>
           <object class="GtkRevealer" id="sidebar_revealer">
+            <property name="width_request">200</property>
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="transition_type">slide-right</property>
@@ -267,11 +246,13 @@
           <object class="GtkBox" id="content_box">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
+            <property name="opacity">0.90000000000000002</property>
             <property name="orientation">vertical</property>
             <child>
               <object class="GtkSearchBar" id="searchbar">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="opacity">0.90000000000000002</property>
                 <child>
                   <object class="GtkSearchEntry">
                     <property name="visible">True</property>
