--- a/glade/ui.glade
+++ b/glade/ui.glade
@@ -15,7 +15,6 @@
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="opacity">0.90000000000000002</property>
-        <property name="has_subtitle">False</property>
         <property name="show_close_button">True</property>
       </object>
     </child>
@@ -214,6 +213,9 @@
                         </child>
                       </object>
                     </child>
+                    <style>
+                      <class name="scrolled"/>
+                    </style>
                   </object>
                   <packing>
                     <property name="expand">True</property>
@@ -273,9 +275,13 @@
               <object class="GtkOverlay" id="notebook_container">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="events">GDK_STRUCTURE_MASK | GDK_TOUCH_MASK</property>
                 <child>
                   <placeholder/>
                 </child>
+                <style>
+                  <class name="background"/>
+                </style>
               </object>
               <packing>
                 <property name="expand">True</property>
@@ -288,6 +294,7 @@
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="transition_type">slide-up</property>
+                <property name="reveal_child">True</property>
                 <child>
                   <object class="GtkBox" id="terminal_container">
                     <property name="visible">True</property>
